--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ dash-core-components==1.14.1
 dash-html-components==1.1.1
 dash-renderer==1.8.3
 dash-table==4.11.1
+dash-extensions==0.0.18
 decorator==4.4.2
 et-xmlfile==1.0.1
 Flask==1.1.2
